src/themes/website/styles/docs.scss
.full-screen {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 2000;
    background: #fff;
}

aside {
    h1 {
        min-width: 200px;
        padding-top: 40px;
        font-size: 15px;
        text-transform: uppercase;
    }
}

.fit {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.scrollable {
    overflow: auto;
}

.list-group-item {
    .text-attention {
        color: #ff6a7c;
        font-weight: 500;
    }
}

.panel {
    padding: 30px;

    .text-muted {
        color: #d1c8b2;
    }

    .list-group-item {
        border-top: 1px solid #ccc;
    }

    &.panel-table {
        padding: 10px 20px;
    }

    &.panel-dark {
        background-color: #fafafa;

        &.panel-highlight {
            background-color: darken(#fafafa, 3%);
        }

        .list-group-item {
            border-top: 1px solid #3b3e4c;
        }

        .form-control {
            font-family: monospace;

            &[readonly] {
                background: none;
                border: none;
            }

            &:focus {
                box-shadow: 0 0 0 .1rem rgba(227, 253, 0, 0.45);
            }
        }

        .btn {
            padding: 5px 20px;
            font-size: .8rem;
        }

        .btn-primary {
            background-color: #28a745;
            border-color: #28a745;
        }

        .btn-default {
            background-color: transparent;
            background-color: #3f4554;
            color: #dbdfeb;
        }

        .btn-group {
            .btn {
                margin: 0;
            }
        }

        textarea {
            resize: vertical;
            min-height: 100px;
        }

        h3 {
            padding-top: 30px;
        }

        pre {
            background-color: transparent;
        }

        hr {
            border-color: rgba(255, 255, 255, 0.1);
        }

        file-input {
            width: 100%;

            .btn-group {
                width: 100%;
            }

            .form-control {
                flex: 1;
            }
        }

        a {
            color: $default-heading-color;
        }
    }
}

.snap {
    &.snap-top {
        position: sticky;
        top: 0;
    }
}

pre {
    font-family: monospace;
    padding: 10px;
    border-radius: .25em;
    font-size: 1em;
    word-break: break-all;
    word-wrap: break-word;
    white-space: pre-wrap;
}

[data-method]:before {
    display: inline-block;
    font-size: .8em;
    /* font-family: Menlo,Monaco,Consolas,"Courier New",monospace; */
    font-weight: 700;
    border-radius: 4px;
    padding: 2px 10px;
    width: 50px;
}

[data-method*="GET"]:before {
    content: "GET";
    color: #038a00;
}

[data-method*="POST"]:before {
    content: "POST";
    color: #0000ff;
}

[data-method*="DELETE"]:before {
    content: "DEL";
    color: #d04040;
}

[data-method*="PUT"]:before {
    content: "PUT";
    color: #876344;
}

[data-method*="HEAD"]:before,
[data-method*="PATCH"]:before {
    content: "PATCH";
    color: #696a6b;
}

[data-method*="OPTIONS"]:before {
    content: "OPT";
    color: #696a6b;
}

[data-method*="HEAD"]:before {
    content: "HEAD";
    color: #696a6b;
}

[data-method*="LINK"]:before {
    content: "LINK";
    color: #696a6b;
}

[data-method*="TRACE"]:before {
    content: "TRACE";
    color: #696a6b;
}

[data-code^="2"] {
    color: #13c20f;
}

[data-code^="3"] {
    color: #2392f7;
}

[data-code^="4"] {
    color: #ff9000;
}

[data-code^="5"] {
    color: #e30012;
}

.monospace {
    font-family: monospace;
}

.detachable-right {
    width: 100%;
    box-shadow: -2px 2px 5px 0 rgba(0, 0, 0, 0.1);
    position: fixed;
    top: 0;
    bottom: 0;
    right: 0;
    z-index: 1000;
    @media (min-width: $breakpoint-md) {
        max-width: 600px;
    }

}

operation-console {
    height: 100%;

    .form-control {
        margin: 0;
    }
}

.apis-section {
    padding: 0;

    & > .container,
    & > .container-fluid {
        & > .row {
            padding: 0;

            & > .col {
                padding: 0;
            }
        }
    }
}

.operation-header {
    display: flex;
    justify-content: space-between;

    .open-console-button {
        margin-left: 10px;
        font-size: .8em;
        font-weight: 700;
        border: none;
        border-radius: 4px;
        transition-duration: .4s;
        height: 30px;
        background-color: #28a745;
        color: white;
        cursor: pointer;
        white-space: nowrap;

        &:hover {
            color: #28a745;
            background-color: white;
        }
    }
}

api-list,
api-list-dropdown,
api-list-tiles {
    flex-basis: 100%;
}

api-list-dropdown {
    .collapsible-dropdown {
        box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.5);
        top: 100%;
        left: 0;
        right: 0;
        padding: 20px;
        z-index: $z-index-dropdowns;
    }
}

.line-clamp {
    text-align: left;
}

api-details,
api-history,
api-list,
change-password-runtime,
confirm-password,
operation-details,
operation-list,
product-apis-runtime,
product-details-runtime,
product-list-dropdown-runtime,
product-list-runtime,
product-subscribe-runtime,
product-subscriptions-runtime,
profile-runtime,
reset-password-runtime,
signin-runtime,
signin-social-runtime,
signup-runtime,
signup-social-runtime,
subscriptions-runtime,
validation-summary {
    flex-basis: 100%;
    max-width: 100%;
}

operation-console {
    background: #fafafa;
}

.code-block {
    font-size: 11.5px;

    .code-block-heading {
        text-transform: uppercase;
        padding: 5px 10px;
        width: 100%;
        min-height: 2em;
    }

    .code-block-command {
        background: none;
        border: none;
        cursor: pointer;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;

        &:hover {
            background: #ccc;
        }
    }

    &.code-block-bordered {
        .code-block-heading {
            background: #EDEBE9;
            border: 1px solid #ccc;
        }

        .code-block-command {
            border-left: 1px solid #ccc;
        }
    }
}

.badge {
    background: none;
    border: 1px solid #aaa;
    color: #636363;
    border-radius: 0;
}

.badge-soap {
    display: inline;
    font-weight: normal;
    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
    font-size: 10px;
    padding: 0 2px;
    margin: 2px;

    order: 1;
    vertical-align: middle;
    display: inline;
    line-height: 1.7em;
}

